<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/navigation_movies"
		android:icon="@drawable/ic_movie_black_24dp"
		android:title="@string/movies" />

	<item
		android:id="@+id/navigation_tv_shows"
		android:icon="@drawable/ic_tv_black_24dp"
		android:title="@string/tv_shows" />

	<item
		android:id="@+id/navigation_favourites"
		android:icon="@drawable/ic_favorite_black_24dp"
		android:title="@string/favourites" />

</menu>
