<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".sections.SectionsFragment">

	<ProgressBar
		android:id="@+id/progress_bar"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:visibility="gone" />

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/rv_favourites"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:clipToPadding="false"
		android:paddingTop="6dp"
		android:paddingBottom="6dp"
		tools:listitem="@layout/item_movie" />

</RelativeLayout>