<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.movies.MoviesFragment">

	<ProgressBar
		android:id="@+id/progress_bar"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:visibility="gone" />

	<androidx.appcompat.widget.SearchView
		android:id="@+id/sv_movies"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:focusable="false"
		app:iconifiedByDefault="false"
		app:queryHint="@string/search_movies" />

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/rv_movies"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/sv_movies"
		android:clipToPadding="false"
		android:paddingTop="6dp"
		android:paddingBottom="6dp"
		tools:listitem="@layout/item_movie" />

</RelativeLayout>